--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     
     <footer>
-        <p>© 2023 盛浩总站 版权所有</p>
+        <p>© 2025 盛浩的总站 版权肯定有 非盛浩授权</p>
     </footer>
 </body>
 </html>
