--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
                 <a href="https://docs.qq.com/doc/p/c7d437f38bf8365e071c9cc1e45f208eef535f90" target="_blank">盛浩简介</a>
                 <p>点击了解盛浩详细信息</p>
             </div>
+
+            <div class="nav-item">
+                <a href="https://syqdsg.github.io/shenghaogame/" target="_blank">盛浩小游戏</a>
+                <p>点击玩盛浩小游戏</p>
+            </div>
+
         </div>
     </div>
     
